--- a/src/pick_objects/CMakeLists.txt
+++ b/src/pick_objects/CMakeLists.txt
@@ -68,10 +68,10 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  move_base_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   move_base_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
